# CIS194

./: .gitignore  CIS194.cabal  README.md  cis194.cabal  package.yaml  stack.yaml  week2.cabal  wk1.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: #week2.hs#  HW03.hs  week2.hs  week2.hs~  week3.hs
src/Week1/: HW1.hs
src/Week1-old/: HW1.hs
src/Week2/: HW2.hs
src/Week3/: HW3.hs  week3.hs
src/Week4/: HW4.hs
src/Week5/: HW5  HW5.hi  HW5.hs  Parser.hi  Parser.hs  victims.json
src/Week5/clues/: new-transactions.json
src/Week6/: HW6.hs
src/Week7/: Cards.hs  HW7.hs
src/Week8/: HW8.hs
src/week11/: STLC.hs
src/week12/: UnsafeHaskell.hs
test/: Spec.hs  Week1Spec.hs  Week3Spec.hs  Week4Spec.hs  Week6Spec.hs  Week7Spec.hs  week3Spec.hs
wk1/: README.md  wk1.hs
