cabal-version: 1.12


name:           cis194
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/week2#readme>
homepage:       https://github.com/githubuser/week2#readme
bug-reports:    https://github.com/githubuser/week2/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2021 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/week2

library
  exposed-modules:
      HW03      
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite cis194-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cis194
    , hspec
  default-language: Haskell2010
